finished web-studio

--- a/index.html
+++ b/index.html
@@ -18,32 +18,37 @@
   </head>
   <body class="body">
     <header class="header">
+
       <div class="container header-container">
-        <a class="header-logo" href="#"><span class="span">Web</span>Studio</a>
-        <nav class="header-nav">
-          <!-- Навігаційне меню -->
-          <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="#">Студія</a></li>
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Портфоліо</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">Контакти</a></li>
-          </ul>
-        </nav>
-        <ul class="header-contact">
-          <li class="contact-item">
-            <a class="contact-link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li class="contact-item">
-            <a class="contact-link" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
-          </li>
-        </ul>
+          <div class="header-right-side">
+              <a href="index.html" class="header-logo-link"><span>Web</span>Studio</a>
+  
+              <nav class="header-nav">
+  
+                  <ul class="nav-list">
+  
+                      <li class="nav-list-item"><a class="nav-link" href="index.html">Студія</a></li>
+  
+                      <li class="nav-list-item"><a class="nav-link" href="portfolio.html">Портфоліо</a></li>
+  
+                      <li class="nav-list-item"><a class="nav-link" href="#">Контакти</a></li>
+  
+                  </ul>
+  
+              </nav>
+          </div>
+
+          <div class="header-left-side">
+              <ul class="header-list">
+                  <li class="header-list-item"><a href="maito:info@devstudio.com" class="header-mail">info@devstudio.com</a></li>
+                      
+                  <li class="header-list-item"><a href="tel:+380961111111" class="header-phone">+38 096 111 11 11</a></li>
+              </ul>
+          </div>
+
       </div>
-    </header>
+</header>
+
     <main class="main">
       <section class="hero">
         <div class="container">
@@ -55,7 +60,6 @@
       <section class="details">
         <!-- Деталі -->
         <div class="container">
-          <h2 class="details-title">details</h2>
           <ul class="details-list">
             <li class="details-item">
               <h3 class="details-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -163,27 +167,25 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container">
-        <a class="footer-logo" href="#"><span class="span">Web</span>Studio</a>
-        <address class="footer-adress">
-          <!-- Контактна інформація -->
-          <ul class="footer-list">
-            <li class="footer-item">
-              <p class="footer-text">
-                Місто Київ, пр-т Лесі Українки, 26
-              </p>
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="footer-item">
-              <a class="footer-link" href="tel:+7205550123">+720 555 0123</a>
-            </li>
-          </ul>
-        </address>
+
+      <div class="container footer-container">
+          <a href="index.html" class="footer-logo-link"><span>Web</span>Studio</a>
+  
+          <address class="footer-address"> 
+  
+              <ul class="footer-address-list">
+  
+                  <li class="footer-address-item"><address class="footer-item-address">м. Київ, пр-т Лесі Українки, 26</address></li>
+  
+                  <li class="footer-address-item"><a href="maito:info@devstudio.com" class="footer-mail">info@devstudio.com</a></li>
+  
+                  <li class="footer-address-item"><a href="tel:+380961111111" class="footer-phone">+38 096 111 11 11</a></li>
+                  
+              </ul>
+  
+          </address>
       </div>
-    </footer>
+
+  </footer>
   </body>
 </html>
